--- a/.github/workflows/main_pythonstocks123.yml
+++ b/.github/workflows/main_pythonstocks123.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Create and start virtual environment
         run: |
-          python.exe -m pip install --upgrade pip
+          python -m pip install --upgrade pip
           python -m venv venv
           source venv/bin/activate
       
