--- a/.github/workflows/main_pythonstocks123.yml
+++ b/.github/workflows/main_pythonstocks123.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - pythonstocks123
+name: Build and deploy Python app to Azure Web Application - Pythonwebapp
 
 on:
   push:
@@ -66,6 +66,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'pythonstocks123'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B7AAFFD832214D81A92BE9991008D269 }}
+          app-name: 'Stocks2'
+          slot-name: 'production'
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_f21f3ded4ff4487e9da6a9bbd1bff749 }}
