--- a/.github/workflows/main_pythonstocks123.yml
+++ b/.github/workflows/main_pythonstocks123.yml
@@ -60,7 +60,15 @@ jobs:
 
       # - name: Unzip artifact for deployment
       #   run: unzip release.zip
-
+      - name: 'Az CLI login with subscription OIDC'
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENTID }}
+          tenant-id: ${{ secrets.AZURE_TENANTID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTIONID }} 
+        
+      - run: |
+          az account show --output none
       
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
