--- a/.github/workflows/main_stocks2.yml
+++ b/.github/workflows/main_stocks2.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Create and start virtual environment
         run: |
+          python -m pip install --upgrade pip
           python -m venv venv
           source venv/bin/activate
       
@@ -32,15 +33,15 @@ jobs:
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      # - name: Zip artifact for deployment
+      #   run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
         with:
           name: python-app
           path: |
-            release.zip
+            .
             !venv/
 
   deploy:
@@ -55,9 +56,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: python-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
+          path: .
+      # - name: Unzip artifact for deployment
+      #   run: unzip release.zip
 
       
       - name: 'Deploy to Azure Web App'
